<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/UserImg"
        android:layout_width="139dp"
        android:layout_height="119dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/userimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:srcCompat="@drawable/ic_launcher_foreground" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/UsernameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintTop_toBottomOf="@id/UserImg"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_user"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/UsernameLayout"
        app:passwordToggleEnabled="true"
        tools:ignore="UnknownId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PassEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonLogin"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#5EAAED"
        android:onClick="loginBtn"
        android:text="@string/login"
        android:textColor="#E9EAEB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout1"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/ViewCreateAccount"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:layout_marginTop="23dp"
        android:clickable="true"
        android:minHeight="100dp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColorHint="#CB7658"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        tools:ignore="MissingConstraints,TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>